kinda fixed autosticky, aimbot will no longer try to aim with stickybomb launcher

--- a/TODO
+++ b/TODO
@@ -6,6 +6,9 @@ TF2C teams
 TF2C merc
 HL2DM teams
 
+Fix Autosticky
+Proj Aimbot
+
 fullbright toggle
 Hunter Rifle
 inspect shit
@@ -18,7 +21,6 @@ namesteal
 autovote
 voice command spam (not like 1 voice command every 1 ms but like just spamming it on the menu)
 
-Player List
 dominatesay assistsay worldsay
 AutoDetonator
 
