--- a/TODO
+++ b/TODO
@@ -1,67 +1,141 @@
-MULTIPLATFORM:
-
-Signature Scanner
-Whole IPC thing | actually, no. cathook for windows WON'T have followbots/ipc.
-Signatures and offsets
-File handling (playerlist, spam, etc...)
-CMake?
-
-------------====-----------
+//==================================================================================================//
+//Big TODO list for cathook																			//	
+//Organized by Julianacat																			//
+//==================================================================================================//
 
 
-TF2C teams
-TF2C merc
-HL2DM teams
 
-fullbright toggle
-Hunter Rifle
-TTS
-namesteal
-autovote
-voice command spam (not like 1 voice command every 1 ms but like just spamming it on the menu)
+//----------------------------------------------------------------------------------------------------------------------//
+//Aimbot/Triggerbot																										//
+//------------------------------------------------------------------------------------------------------------------//  //
+																													//	//
+Hook + Aimbot FIX																									//	//
+																													//	//
+no aim sapper																										//	//
+																													//	//
+Make hacks respect Mannpower powerups and other conditions when calcuating damage, hitbox and prioritizing targets	//	//
+Proper AutoHitbox, Isnt this already a thing??																		//	//
+																													//	//
+Flare aim on fire																									//	//
+Improve Projectile Aimbot. A lot.																					//	//
+ProjPredOrigin																										//	//
+MAX -> MIN priority																									//	//
+																													//	//
+Hunter Rifle?																										//	//
+																													//	//
+AutoDetonator																										//	//
+																													//	//
+No AutoShoot when disguised																							//	//
+Ambassador bodyshotting																								//	//
+No Trigger Mediguns																									//	//
+More projectile weapons aimbot (wrap assassin, wrangler, stickybomb, airstrike)										//	//
+Auto trigger DR before rockets																						//	//
+																													//	//
+Make make sentrys slightly lower priority (for getting those pesky turtle engies)									//	//
+																													//	//
+Make building aimbot compensate for gravity on projectile weapons													//	//
+																													//	//
+add Spectator Silent for projectile weapons 																		//	//
+																													//	//
+Improve aimbot accuracy 																							//	//
+																													//	//
+Add Multipoint (Take hitbox, shrink it, then use corners as points to check)										//	//
+																													//	//
+Make ambasador check rely on wait for charge user setting															//	//
+																													//	//
+//------------------------------------------------------------------------------------------------------------------//	//
+//																														//
+//----------------------------------------------------------------------------------------------------------------------//
+																																							
+																																							
 
-dominatesay assistsay worldsay
-AutoDetonator
+//----------------------------------------------------------------------------------------------------------------------//
+//Visuals/GUI																											//
+//------------------------------------------------------------------------------------------------------------------//  //
+																													//	//
+Display on the left																									//	//
+																													//	//
+make gui color change																								//	//
+																													//	//
+Cheat status menu (A gui to display enabled/disabled states of user settings for when the menu is off)				//	//
+																													//	//
+add teleporter count down																							//	//
+add spy cloak esp																									//	//
+																													//	//
+Make ubercharge esp color RGB when fully charged																	//	//
+																													//	//
+fullbright toggle																									//	//
+																													//	//
+FLAG ESP?																											//	//
+																													//	//
+ESP Icons																											//	//
+ESP Distance sort																									//	//
+Show sapped buildings in ESP																						//	//
+halloween medkits																									//	//
+carrying esp																										//	//
+Tracers/Spy Cam																										//	//
+																													//	//
+//------------------------------------------------------------------------------------------------------------------//	//
+//																														//
+//----------------------------------------------------------------------------------------------------------------------//
 
-ProjPredOrigin
-MAX -> MIN priority
-Deflected by enemy player
- Aim Stickies
-FLAG ESP
-no aim sapper
-Improve Projectile Aimbot. A lot.
-Proper AutoHitbox
-Display on the left
-Flare aim on fire
-Aim Sticky
-Proj Pred visuals
-Hook + Aimbot FIX
-ESP Icons
-ESP Distance sort
-Show sapped buildings in ESP
-Make hacks respect Mannpower powerups and other conditions when calcuating damage, hitbox and prioritizing targets
-Fake Lag
-Engine Prediction
-AutoSticky improve
-No AutoShoot when disguised
-Ambassador bodyshotting
-No Trigger Mediguns
-More projectile weapons aimbot (wrap assassin, wrangler, stickybomb, airstrike)
-Auto trigger DR before rockets
-Sticky vischeck
-InsultSpam
-Critical rifles bodyshotting
-FLAG ESP
-Spy alert uses angles
-halloween medkits
-carrying esp
-Tracers/Spy Cam
-Bodyshot if not zoomed
-Proper medic followbot AI
-Bot option for aiming at owner's prey (just for fun)
-Bot pathfinding & navigation files system
-Proper entity classes (actually I might just use a lot of helper functions taking IClientEntity* as first arg)
-Priority system optimization and testing
-General optimization and refactoring
-Bone ESP
-XorString or something to make it harder to detect.
+
+
+//----------------------------------------------------------------------------------------------------------------------//
+//Chat and Related																										//
+//------------------------------------------------------------------------------------------------------------------//  //
+																													//	//
+TTS																													//	//
+namesteal																											//	//
+autovote																											//	//
+																													//	//
+dominatesay assistsay worldsay																						//	//
+InsultSpam																											//	//
+																													//	//
+//------------------------------------------------------------------------------------------------------------------//	//
+//																														//
+//----------------------------------------------------------------------------------------------------------------------//
+
+
+
+//----------------------------------------------------------------------------------------------------------------------//
+//Followbots																											//
+//------------------------------------------------------------------------------------------------------------------//  //
+																													//	//
+Proper medic followbot AI, breadcrumb followbot is good but a nav system would be better							//	//
+																													//	//
+Bot option for aiming at owner's prey (just for fun)																//	//
+Bot pathfinding & navigation files system																			//	//
+Proper entity classes (actually I might just use a lot of helper functions taking IClientEntity* as first arg)		//	//
+																													//	//
+//------------------------------------------------------------------------------------------------------------------//	//
+//																														//
+//----------------------------------------------------------------------------------------------------------------------//
+
+
+
+//----------------------------------------------------------------------------------------------------------------------//
+//Misc			 																										//
+//------------------------------------------------------------------------------------------------------------------//  //
+																													//	//
+Proper Fake Lag																										//	//
+Add auto-strafe																										//	//
+																													//	//
+Fix achievement hack getting blocked with sv_cheats																	//	//
+																													//	//
+Spy alert uses angles																								//	//
+																													//	//
+Add ignore gunslinger to melee crit hack 																			//	//
+																													//	//
+Priority system optimization and testing																			//	//
+General optimization and refactoring																				//	//
+																													//	//
+XorString or something to make it harder to detect.																	//	//
+																													//	//
+TF2C teams																											//	//
+TF2C merc																											//	//
+HL2DM teams																											//	//
+																													//	//
+//------------------------------------------------------------------------------------------------------------------//	//
+//																														//
+//----------------------------------------------------------------------------------------------------------------------//
