--- a/TODO
+++ b/TODO
@@ -75,8 +75,7 @@ FLAG ESP?																											//	//
 																													//	//
 ESP Icons																											//	//
 ESP Distance sort																									//	//
-Show sapped buildings in ESP																						//	//
-halloween medkits																									//	//
+Show sapped buildings in ESP																						//	//																									//	//
 carrying esp																										//	//
 Tracers/Spy Cam																										//	//
 																													//	//
