MOre fixes and wrangler aimbot

--- a/TODO
+++ b/TODO
@@ -23,7 +23,7 @@ MAX -> MIN priority																									//	//
 																													//	//
 																													//	//
 No Trigger Mediguns																									//	//
-More projectile weapons aimbot (wrap assassin, wrangler, stickybomb, airstrike)										//	//
+More projectile weapons aimbot (wrap assassin, wrangler, airstrike)										//	//
 																													//	//
 																													//	//
 Make building aimbot compensate for gravity on projectile weapons													//	//
@@ -57,10 +57,9 @@ fullbright toggle																									//	//
 FLAG ESP?																											//	//
 																													//	//
 ESP Icons																											//	//
-ESP Distance sort																									//	//
-Show sapped buildings in ESP																						//	//																									//	//
+ESP Distance sort																									//	//																								//	//
 carrying esp																										//	//
-Spy Cam																										//	//
+Spy Cam																										        //	//
 																													//	//
 //------------------------------------------------------------------------------------------------------------------//	//
 //																														//
