Added Enemy Buildings to Radar
Added Enemy Buildings to Radar

Updated atlas.png and xcf

Updated TODO

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ update CGameRules and fix navbot
 
 fix crashes (i hope BenCat07 will fix it)
 
-fix EventLogging (crash)
+fix explosionspheres (crash)
 
 fix skyboxchanger (not working and crash)
 
